# veqpy-dev

./: .gitignore  AGENTS.md  LICENSE  README.md  TASK.md  benchmark.py  benchmark_compare.txt  boundary_fit.py  constructed_from_pq.geqdsk  demo.py  geqdsk.txt  pyproject.toml  test.py
.devcontainer/: Dockerfile
data/: SOLOVEV.geqdsk
doc/: conventions.md  guardrails.md  overview.md  veqpy_equilibrium.md  veqpy_operators.md
docs/: agent-context.md  conventions.md  guardrails.md  operator_engine_abi.md  operator_refactor_round_summary.md  overview.md
docs/theory/: equilibrium.md  geometry.md  profile.md  residual.md  source.md
paper/: iopjournal-template.aux  iopjournal-template.blg  iopjournal-template.out  iopjournal-template.tex  iopjournal.cls
scripts/: 01-shaping-coefficients.py  02-operator-pipeline.py  03-demo-equilibrium.py  04-resolution-dependence.py  05-multi-route-consistency.py  06-high-order-reconstructions.py  07-pareto-analysis.py  08-residual-distribution.py  09-downstream-check.py  CHEASE  EFIT  c-collocation-residual-distribution.py  config.py  diagnose_h_mode_geom.py  diagnose_h_mode_hybr.py  enforce_utf8_lf.py  generate_input_diagrams.py  generate_terrain.py  scan_h_mode_configs.py  trace_explosion.py  veqpy_vs_chease.py  veqpy_vs_efit.py
scripts/detail/: __init__.py  gfile_compare.py
tests/: EFIT.geqdsk  benchmark.py  benchmark_fourier_runtime.py  demo.py  demo_geqdsk_boundary_shape.py  demo_geqdsk_workflow.py  demo_residual_form_methods.py  fitting.py  hotspot.py  profile_single_solve.py  regression.py  test_base_regression.py  test_benchmark_regression.py  test_engine_core_regression.py  test_engine_source_regression.py  test_fourier_geometry_phase2.py  test_fourier_power_kmax.py  test_fourier_refactor_phase1.py  test_fourier_residual_phase3.py  test_geqdsk_boundary_shape.py  test_grid_kmax_regression.py  test_math_regression.py  test_model_core_regression.py  test_model_regression.py  test_operator_core_regression.py  test_operator_facade_contract.py  test_solver_core_regression.py  test_solver_fallback_attempts.py  test_solver_regression.py  test_source_interpolation_variants.py  test_source_projection_global_disable.py  test_static_contracts.py
veqpy/: __init__.py  orchestration.py  residual_blocks.py
veqpy/base/: __init__.py  reactive.py  registry.py  serial.py
veqpy/engine/: __init__.py  backend.py  (+14 more)
(+65 files in other folders)
