[build-system]
requires = [
    "setuptools>=69",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "veqpy"
dynamic = ["version"]
description = "veqpy — Veloce/Variational EQuilbrium code"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    {name = "rhzhang", email = "rhzhang@mail.dlut.edu.cn"},
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "orjson>=3.9",
    "matplotlib>=3.7",
    "scipy>=1.17.1",
    "numba>=0.64.0",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "packaging>=24.2",
    "pytest>=7.0",
    "ruff>=0.4",
    "twine>=6.2",
]
jax-cpu = [
    "jax>=0.9.2",
]
jax-gpu = [
    "jax[cuda13]>=0.9.2; platform_system == 'Linux'",
]
nevergrad = ["nevergrad>=1.0"]

[dependency-groups]
dev = [
    "build>=1.2",
    "packaging>=24.2",
    "pytest>=7.0",
    "ruff>=0.4",
    "twine>=6.2",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["veqpy*"]

[tool.setuptools.dynamic]
version = {attr = "veqpy.__version__"}

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
